--- a/pom.xml
+++ b/pom.xml
@@ -97,14 +97,14 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://15.207.223.90:8081/repository/wallmart-release/</url>
+	      <name>Wallmart Releases Nexus Repository</name>
+	      <url>http://15.206.210.151:8081/repository/wallmart-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://15.207.223.90:8081/repository/wallmart-snapshot/</url>
+	      <name>Wallmart Snapshot Nexus Repository </name>
+	      <url>http://15.206.210.151:8081/repository/wallmart-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
