--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		 <sonar.host.url>http://3.7.248.93:9000/</sonar.host.url>
-                <sonar.login>e6a8ae6a448fbc3ced1501dbd5ce9a1590caf197</sonar.login> 
+		 <sonar.host.url>http://3.7.70.60/:9000/</sonar.host.url>
+                <sonar.login>b95e926bd3bb01e4055f57690f8c09625bf0cb81</sonar.login> 
               
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -98,13 +98,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Wallmart Releases Nexus Repository</name>
-	      <url>http://35.154.4.131:8081/repository/wallmart-release/</url>
+	      <url>http://3.232.183.178:8081/repository/wallmart-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Wallmart Snapshot Nexus Repository </name>
-	      <url>http://35.154.4.131:8081/repository/wallmart-snapshot/</url>
+	      <url>http://3.232.183.178:8081/repository/wallmart-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
