--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		 <sonar.host.url>http://15.206.90.176:9000/</sonar.host.url>
+		 <sonar.host.url>http://13.232.253.156:9000</sonar.host.url>
                 <sonar.login>513c2aae212fc983ce02a1315647096c2cb6a9e4</sonar.login> 
               
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
